# rip_shuffle

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  lib.rs  merge_shuffle.rs  prefetch.rs  profiler.rs  random_bits.rs  statistical_tests.rs  uniform_index.rs
src/blocked/: block.rs  blocks.rs  mod.rs  slicing.rs
src/bucketing/: bucket.rs  buckets.rs  mod.rs  parallel.rs  slicing.rs
src/fisher_yates/: mod.rs  naive.rs  noncontiguous.rs  with_prefetch.rs  with_prefetch_alt.rs  with_unsafe_algos.rs
src/rough_shuffle/: common_tests.rs  mod.rs  naive.rs  stashed.rs  with_unsafe_algos.rs
src/scatter_shuffle/: mod.rs  parallel.rs  sequential.rs
