[package]
name = "rip_shuffle"
description = "Fast sequential and parallel inplace shuffling algoritms"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Penschuck <rip_shuffle@algorithm.engineering>"]

[features]
default = ["unsafe_algos", "prefetch", "seed_with"]
unsafe_algos = []
prefetch = []
seed_with = ["rand_pcg"]

[dependencies]
arrayvec="0.7"
rand="0.8"
rand_distr="0.4"
rayon="1.6"
rand_pcg={version="0.3", optional=true}

[dev-dependencies]
itertools="0.10"
rand_pcg="0.3"
statrs="0.16"

