[package]
name = "rip_shuffle"
description = "Fast sequential and parallel in-place shuffling algorithms"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Penschuck <rip_shuffle@algorithm.engineering>"]
license = "GPL-3.0-or-later"
keywords = ["random", "algorithm", "parallel", "rayon", "shuffle"]
category = ["concurrency", "mathematics", "science", "simulation"]
exclude = [".gitignore", ".gitlab-ci.yml",  ".github/", "target"]
homepage = "https://github.com/manpen/rip_shuffle"

[features]
default = ["unsafe_algos", "prefetch", "seed_with"]
unsafe_algos = []
prefetch = []
seed_with = ["rand_pcg"]

[dependencies]
arrayvec="0.7"
rand="0.8"
rand_distr="0.4"
rayon="1.6"
rand_pcg={version="0.3", optional=true}

[dev-dependencies]
itertools="0.10"
rand_pcg="0.3"
statrs="0.16"

